# calcurve

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
calcurve/: __init__.py  _calibration.py
examples/: calibration_analysis.ipynb  calibration_analysis.py  uncertainty_methods_benchmark.ipynb  uncertainty_methods_benchmark.py
tests/: test_calibration.py
