[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calcurve"
version = "0.1.0"
authors = [
    {name = "Cascade"}
]
description = "Calibration curves with confidence intervals for scikit-learn classifiers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "jupyter",
    "notebook",
    "seaborn",
    "jupytext",
    "ipykernel",
    "ruff",
]

[tool.pytest.ini_options]
addopts = "-v --cov=calcurve --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
# Same as Black
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and isort (I)
select = ["E", "F", "I"]
ignore = ["E203"]  # Ignore whitespace before ':' (black handles this)

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Skip magic trailing comma
skip-magic-trailing-comma = false
# Line ending style
line-ending = "auto"
